@@ -1,14 +1,14 @@
 <!-- $Id$ -->
 
-<table border=0>
+<table class="selector">
 	<tr valign=center>
 		<td>
 			<jwc id="form">
 				<jwc id="selectPage"/>
 			</jwc>
 		</td>
-		<td>
-			<i><jwc id="page">page</jwc></i>
+		<td class="page-link">
+			<jwc id="page">page</jwc>
 		</td>
 <jwc id="e">
 		<td>&gt;&gt;</td>
@@ -18,3 +18,5 @@
 </jwc>
 	</tr>
 </table>
+<jwc id="wrapped"/>
+
