@@ -1,0 +1,30 @@
+<!-- $Id$ -->
+
+<jwc id="ifNoProperties">
+<span class="message">Page contains no persistent properties.</span>
+</jwc>
+
+<jwc id="ifHasProperties">
+<table class="inspector-data">
+	<tr class="heading">
+		<th>Component</th> <th>Property Name</th> <th>Value Class</th> <th>Value</th>
+	</tr>
+<jwc id="e">
+	<jwc id="evenOdd">
+		<td>
+			<jwc id="select"><jwc id="insertPath"/></jwc>
+		</td>
+		<td>
+			<jwc id="insertPropertyName"/>
+		</td>
+		<td>
+			<jwc id="insertValueClass"/>
+		</td>
+		<td>
+			<jwc id="insertValue"/>
+		</td>
+	</jwc>
+</jwc>
+</table>
+</jwc>
+
