@@ -1,0 +1,108 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- $Id$ -->
+<!DOCTYPE specification PUBLIC "-//Primix Solutions//Tapestry Specification 1.0//EN"  "http://tapestry.primix.com/dtd/Tapestry_1_0.dtd">
+<specification>
+	<class>com.primix.tapestry.inspector.ShowProperties</class>
+	<components>
+		<component>
+			<id>ifNoProperties</id>
+			<type>Conditional</type>
+			<bindings>
+				<binding>
+					<name>condition</name>
+					<property-path>properties</property-path>
+				</binding>
+				<static-binding>
+					<name>invert</name>
+					<value>true</value>
+				</static-binding>
+			</bindings>
+		</component>
+		<component>
+			<id>ifHasProperties</id>
+			<type>Conditional</type>
+			<bindings>
+				<binding>
+					<name>condition</name>
+					<property-path>properties</property-path>
+				</binding>
+			</bindings>
+		</component>
+		<component>
+			<id>e</id>
+			<type>Foreach</type>
+			<bindings>
+				<binding>
+					<name>source</name>
+					<property-path>properties</property-path>
+				</binding>
+				<binding>
+					<name>value</name>
+					<property-path>change</property-path>
+				</binding>
+			</bindings>
+		</component>
+		<component>
+			<id>evenOdd</id>
+			<type>/com/primix/tapestry/inspector/EvenOdd.jwc</type>
+		</component>
+		<component>
+			<id>select</id>
+			<type>Direct</type>
+			<bindings>
+				<binding>
+					<name>listener</name>
+					<property-path>page.selectComponentListener</property-path>
+				</binding>
+				<binding>
+					<name>context</name>
+					<property-path>change.componentPath</property-path>
+				</binding>
+				<binding>
+					<name>enabled</name>
+					<property-path>enableComponentLink</property-path>
+				</binding>
+			</bindings>
+		</component>
+		<component>
+			<id>insertPath</id>
+			<type>Insert</type>
+			<bindings>
+				<binding>
+					<name>value</name>
+					<property-path>change.componentPath</property-path>
+				</binding>
+			</bindings>
+		</component>
+		<component>
+			<id>insertPropertyName</id>
+			<type>Insert</type>
+			<bindings>
+				<binding>
+					<name>value</name>
+					<property-path>change.propertyName</property-path>
+				</binding>
+			</bindings>
+		</component>
+		<component>
+			<id>insertValueClass</id>
+			<type>Insert</type>
+			<bindings>
+				<binding>
+					<name>value</name>
+					<property-path>valueClassName</property-path>
+				</binding>
+			</bindings>
+		</component>
+		<component>
+			<id>insertValue</id>
+			<type>Insert</type>
+			<bindings>
+				<binding>
+					<name>value</name>
+					<property-path>change.newValue</property-path>
+				</binding>
+			</bindings>
+		</component>
+	</components>
+</specification>
